--- a/app/globals.css
+++ b/app/globals.css
@@ -8,15 +8,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: 'Poppins', sans-serif;
-  --font-mono: 'Poppins', sans-serif;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-sans: "Poppins", sans-serif;
+  --font-mono: "Poppins", sans-serif;
 }
 
 body {
